# ai-platform

./: .cursorrules  .gitattributes  .gitignore  .plugin_registry.json  .protected_files.json  .semgrep.yml  AGENTS.md  PROBLEMS.md  README.md  TUTORIAL.md  WARNINGS.md  ai_architecture.json  git_init_push.ps1  git_push.ps1  index.json  mcp.json  pyproject.toml  requirements.txt  sandbox_api.py  setup.bat  start-backend.bat  start-desktop.bat  start-full.bat  start-no-login.bat  start-quick.bat  start-web.bat  test_e2e.bat
MCP_3D/: Taskfile.yml  auto_game_test.py  auto_test.bat  automation_log.txt  automation_setup.ps1  clone_wave2.ps1  clone_wave3.ps1  full_setup.ps1  mcp_3d_unified.json  mega_log.txt  mega_setup.ps1  network_cluster_config.txt  setup_full_log.txt  setup_log.txt  setup_mcp_3d.ps1  ultimate_log.txt  ultimate_setup.ps1
MCP_3D/ComfyUI-nodes/ComfyUI-TextureAlchemy/: CHANGELOG.md  DOCUMENTATION_INDEX.md  LICENSE  NEW_NODES_SUMMARY.md  QUICK_REFERENCE.md  README.md  WORKFLOWS.md  __init__.py  analysis_utils.py  batch_prep.py  blend_utils.py  channel_utils.py  color_advanced.py  color_utils.py  detail_utils.py  effect_utils.py  environment_utils.py  filter_utils.py  height_advanced.py  map_utils.py  mask_generators.py  material_advanced.py  noise_utils.py  normal_combine.py  normal_utils.py  pbr_core.py  pbr_extractor_node.py  pbr_pipeline.py  pyproject.toml  qwen_extras.py  relight_utils.py  shuffle_custom_colors.py  texture_utils.py
MCP_3D/ComfyUI-nodes/ComfyUI-TextureAlchemy/examples/: 01_quick_start_pbr_extraction.json  02_quick_start_pbr_Build.json  02_seamless_tiling.json  03_channel_packing_orm.json  04_color_ramp_stylized.json  05_seamless_with_inpainting.json  06_texture_offset_and_tiling.json  07_texture_tiler_modes.json  08_texture_equalizer_test.json  09_normal_format_validator.json  10_fastest_pbr_extraction.json  11_frequency_separation_workflow.json  12_procedural_material_creation.json  13_mask_generation_weathering.json  14_blend_modes_showcase.json  README.md  WORKFLOW_INDEX.md
MCP_3D/ComfyUI-nodes/ComfyUI-TextureAlchemy/web/: color_picker_widget.js  color_ramp_widget.js  mask_compositor.js
MCP_3D/Godot/gdextension/GDLlama/: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
MCP_3D/Godot/gdextension/GDLlama/.github/workflows/: ci.yml  test-latest-llama.yml
MCP_3D/Godot/gdextension/GDLlama/docs/: AI_LEGAL.md  API_REFERENCE.md  ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  DESIGN.md  EXAMPLES.md  VERSION.md
MCP_3D/Godot/gdextension/GDLlama/include/: gdllama.hpp  llama_controller.hpp  llama_state.hpp  logging_utils.hpp
MCP_3D/Godot/gdextension/GDLlama/plugin/: godot_llm.gdextension  plugin.cfg
MCP_3D/Godot/gdextension/GDLlama/plugin/doc_classes/: GDLlama.xml
MCP_3D/Godot/gdextension/GDLlama/src/: gdllama.cpp  llama_controller.cpp  llama_runner.cpp  llama_state.cpp  logging_utils.cpp  register_types.cpp
MCP_3D/Godot/gdextension/GDLlama/tests/: test_llama_controller.cpp  test_llama_state.cpp
MCP_3D/Testing/godot-e2e/: .editorconfig  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SECURITY.md  pyproject.toml
MCP_3D/Testing/godot-e2e/.github/: PULL_REQUEST_TEMPLATE.md
MCP_3D/Testing/godot-e2e/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
MCP_3D/Testing/godot-e2e/.github/workflows/: ci.yml  publish.yml
MCP_3D/Testing/godot-e2e/docs/: api-reference.md  api-reference.zh-CN.md  architecture.md  architecture.zh-CN.md  getting-started.md  getting-started.zh-CN.md  testing-patterns.md  testing-patterns.zh-CN.md  versioning.md  versioning.zh-CN.md
MCP_3D/Testing/godot-e2e/docs/update/: next.md  next.template.md  release-checklist.md  v1.1.0.md
MCP_3D/Testing/godot-e2e/examples/minimal/: README.md
MCP_3D/Testing/godot-e2e/examples/minimal/godot_project/: main.gd  main.tscn  project.godot
MCP_3D/Testing/godot-e2e/examples/minimal/tests/e2e/: conftest.py  test_basics.py
MCP_3D/Testing/godot-e2e/examples/platformer/godot_project/: main.gd  main.tscn  project.godot
MCP_3D/Testing/godot-e2e/examples/platformer/tests/e2e/: conftest.py  test_player.py
MCP_3D/Testing/godot-e2e/examples/ui_testing/: README.md
MCP_3D/Testing/godot-e2e/examples/ui_testing/godot_project/: detail.gd  detail.tscn  menu.gd  menu.tscn  project.godot
MCP_3D/Testing/godot-e2e/examples/ui_testing/tests/e2e/: conftest.py  test_ui.py
MCP_3D/Testing/godot-e2e/python/godot_e2e/: __init__.py  cli.py  client.py  commands.py  fixtures.py  launcher.py  types.py
MCP_3D/Testing/godot-e2e/tests/: conftest.py  test_connection.py  test_groups.py  test_input.py  test_node_ops.py  test_scene.py  test_screenshot.py  test_sync.py
MCP_3D/Testing/godot-e2e/tests/godot_project/: main.gd  main.tscn  project.godot  test_level.gd  test_level.tscn
adapter/: INDEX.md  README.md
ai-plugin/: plugin.yaml
ai-rules/: ai-platform.md  coding.md
config/: resource_profiles.yaml
core/: CLAUDE_MODE.md  README.md  __init__.py  ai.py  ai_adapter.py  ai_agent.py  ai_collaboration.py  ai_comparison_analyzer.py  ai_config.py  ai_new.py  ai_plugin_system.py  ai_rules.py  ai_unified.py  asar_extractor.py  auto_skill.py  bug_recorder.py  claude_integration.py  claude_mode.py  context_manager.py  conversation_recorder.py  data_bridge.py  deep_bug_check.py  dispatcher.py  evaluator.py  evo_engine.py  exceptions.py  file_protector.py  fix_all_imports.py  fix_remaining.py  game_test_framework.py  git_manager.py  hosts_watchdog.py  infra_adapter.py  intelligent_requirement_recognizer.py  maintenance.py  mcp_classifier.py  mcp_extended.py  mcp_lite.py  model_info_manager.py  optimizer.py  (+19 more)
docs/: 1.txt  AI_USAGE_GUIDE.md  AI建模工具使用指南.md  ARCHITECTURE_REDESIGN.md  GLM5.1资料收集.md  NEW_ARCHITECTURE_DESIGN.md  PLUGIN_API_REFERENCE.md  PROBLEMS.md  QUICK_START_TRAE.md  TRAE_COMPLETE_GUIDE.md  mod_framework_readme.txt  update_log_20260425_104609.txt  无距离限制架构_完整故事设定大纲.md  本地化AI能力集成平台文档.md  要搞的东西_INDEX.md  这游戏也太真实了_资源使用指南.md
e2e/: auth.spec.ts
gstack_core/: PATH_MAP.md  (+1 more)
(+2011 files in other folders)
