[project]
name = "TextureAlchemy"
version = "1.5.0"
description = "Complete PBR & texture processing toolkit for ComfyUI"
license = {text = "Apache-2.0"}

[project.urls]
Repository = "https://github.com/amtarr/ComfyUI-TextureAlchemy"

[tool.comfy]
PublisherId = "amtarr"
DisplayName = "Texture Alchemy"
